--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header class="principal-page">
-            <h1>Oceans 20</h1>
+            <h1 id="artext">BeOcean</h1>
             <nav>
                 <ul>
                     <li><a href="">Link1</a></li>
@@ -33,7 +33,7 @@
             <p>
                A Oceans 20 é uma associação internacional de 20 países dedicada à proteção dos oceanos, enfrentando desafios como poluição, pesca excessiva e mudanças climáticas, promovendo políticas de conservação, pesquisa científica e práticas sustentáveis para garantir a saúde dos ecossistemas marinhos.
             </p>
-            <a href="" class="btn">Conheça a Ocean 20</a>
+            <a href="" class="btn">Conheça a BeOcean</a>
         </section>
     </div>
 </body>
